--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ footer small {
 }
 
 #index {
-    background-image: url(../images/bg-index.jpg);
+    background-image: url(bg-index.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -147,7 +147,7 @@ footer small {
 }
 
 #about {
-    background-image: url(../images/bg-about.jpg);
+    background-image: url(bg-about.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
@@ -232,7 +232,7 @@ table {
 }
 
 #portfolio {
-    background-image: url(../images/bg-portfolio.jpg);
+    background-image: url(bg-portfolio.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
@@ -270,7 +270,7 @@ a img:hover {
 }
 
 #photograph {
-    background-image: url(/images/bg-photograph.jpg);
+    background-image: url(bg-photograph.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
@@ -288,7 +288,7 @@ a img:hover {
 }
 
 #video {
-    background-image: url(/images/bg-video.jpg);
+    background-image: url(bg-video.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
@@ -296,7 +296,7 @@ a img:hover {
 }
 
 #contact {
-    background-image: url(/images/bg-contact.jpg);
+    background-image: url(bg-contact.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
@@ -434,7 +434,7 @@ a img:hover {
     }
 
     #portfolio {
-        background-image: url(../images/bg-portfolio-sp.jpg);
+        background-image: url(bg-portfolio-sp.jpg);
     }
 
     .sidebar {
